@@ -1,3 +1,9 @@
+2006-02-07 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b10
+
+ * FIX: If zipdownload is enabled and zipping failed,
+	gallery regardless tried to delete the parentfolder of the non existing file.
+	This deletes A LOT MORE then we want.
+
 2006-02-06 Jens Tkotz <jens@peino.de> 1.5.3-cvs-b9
 
  * SECURITY-FIX:
